# gen-ai-app-deploy-langchain-cloud-run

./: README.md  pyproject.toml
app/: server.py
