[tool.poetry]
name = "run-rag"
version = "0.1.0"
description = ""
authors = ["Albert Gil López <albert@albertgilopez.es>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
cloud-sql-python-connector = {extras = ["pg8000"], version = "^1.9.2"}
langchain-google-vertexai = "^1.0.4"
langchain-community = "^0.2.2"
pgvector = "^0.2.5"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
